# EmbeddedSystems

./: Lab 2 Report.docx  Lab 5 Report.odt  Lab6.c  Lab8.c  buttons.c  buttons.h  buzzer.h  config_bits.h  eeprom.c  eeprom.h  lab2.c  lab3-2.c  lab3-3.c  lab3-buttons.c  lab3.c  lab4.c  lab7task1.c  lab7tasks.c  lab9.c  lcd.c  lcd.h  lm35.h  main.c  sevenseg.c  sevenseg.h
Assignment.X/: Assignment.mc3  buttons.c  buzzer.c  buzzer.h  config_bits.h  eeprom.c  eeprom_cfg.h  eerprom.h  i2c.c  i2c.h  lcd.c  lm35.c  main.c  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml  rtc.c  rtc.h
Assignment.X/mcc_generated_files/system/: clock.h
Assignment.X/mcc_generated_files/system/src/: clock.c  config_bits.c  pins.c
Assignment.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  configurations.xml  project.xml
Assignment.X/nbproject/private/: configurations.xml  private.xml
EmbeddedLibrary.X/: button.c  button.h  lcd.c  lcd.h  led.c  led.h  lib.h  sevenseg.c  sevenseg.h  therm.c  therm.h
EmbeddedLibrary.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
EmbeddedLibrary.X/nbproject/private/: configurations.xml  private.xml
HelperLibrary/: CMakeLists.txt  compile_commands.json  main.c
HelperLibrary/build-My Setup 1 Clone/: CMakeCache.txt  HelperLibrary_example.dbg  HelperLibrary_example.dlt  HelperLibrary_example.hex  HelperLibrary_example.lst  HelperLibrary_example_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
HelperLibrary/build-My Setup 1 Clone/lib/: cmake_install.cmake
HelperLibrary/lib/: CMakeLists.txt  button.c  led.c  lib.h  seven_seg.c
